<resources>
    <string name="app_name">ThemeStylesIcons</string>
    <string name="nome_usuario_cadastro">Nome</string>
    <string name="idade_cadastro">Idade</string>
    <string name="limpar_cadastro">Limpar</string>
    <string name="salvar_cadastro">Salvar</string>
    <string name="hint_nome">Nome Completo</string>
    <string name="campos_apagados">Campos apagados</string>
    <string name="preencha_o_nome_corretamente">Preencha o nome corretamente</string>
    <string name="preencha_a_idade_corretamente">preencha a idade corretamente</string>
    <string name="nome_valor">"Nome: "</string>
    <string name="idade_valor">"Idade: "</string>
    <string name="eh_diabetico">É Diabético?</string>
    <string name="diabetico_true">Diabético</string>
    <string name="diabetico_false">Não diabético</string>
    <string name="nao_informar">Prefiro não informar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sexo_valor">"Sexo: "</string>
    <string name="faltou_selecionar_o_sexo">Faltou selecionar o sexo!</string>
    <string name="sexo_cadastro">Sexo</string>
    <string name="objetivo_cadastro">Objetivo</string>
    <string name="perder_peso">Perder peso</string>
    <string name="ganhar_musculo">Ganhar Músculo</string>
    <string name="ambos_cadastro">Ambos</string>
    <string name="objetivo">"Objetivo: "</string>
    <string name="usuario_clicado">"Usuário clicado: "</string>
    <string name="logo_food">Logo Food App</string>
    <string name="descricao">Aplicativo Contador de Calorias</string>
    <string name="autoria">Autor: <a href = "www.linkedin.com/in/lucas-coelho-dos-santos-1b5888109">Lucas Coelho dos Santos</a></string>
    <string name="sobre">Sobre</string>
    <string name="controle_de_usuarios">Controle de usuários</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="curso">Curso: Tecnologia Java</string>
    <string name="email">lsantos.1995@alunos.utfpr.edu.br</string>
    <string name="url">www.utfpr.edu.br</string>
    <string name="nenhum_aplicativo_para_abrir_web">Nenhum aplicativo para abrir web</string>
    <string name="nenhum_aplicativo_para_enviar_email">Nenhum aplicativo para enviar email</string>
    <string name="contato_pelo_aplicativo">Contato pelo aplicativo</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="sugerir">Sugerir</string>
</resources>